--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dev": "node ./server.js",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src --fix && next lint",
     "prepare": "husky install",
-    "test": "next lint && tsc"
+    "test": "next lint && tsc",
+    "pretty": "prettier --write src && prettier --check src "
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -28,10 +29,14 @@
     "@types/cookies": "^0.7.7",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-valtio": "^0.4.2",
     "husky": "^7.0.4",
     "prettier": "^2.4.1",
     "typescript": "4.5.2"
